--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -19,4 +19,5 @@
     <string name="defalutFont">默认字体</string>
     <string name="guoyuandianjin">国元点金</string>
     <string name="English">英语</string>
+    <string name="jar_to_st">第三方库简繁体</string>
 </resources>
