--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -35,4 +35,5 @@
     <string name="guoyuandianjin">國元點金</string>
     <string name="English">英語</string>
     <string name="jar_to_st">第三方库简繁体</string>
+    <string name="font_scale">修改字体大小</string>
 </resources>
