--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -20,4 +20,5 @@
     <string name="guoyuandianjin">国元点金</string>
     <string name="English">英语</string>
     <string name="jar_to_st">第三方库简繁体</string>
+    <string name="font_scale">修改字体大小</string>
 </resources>
