--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="guoyuandianjin">National yuan point</string>
     <string name="English">English</string>
     <string name="jar_to_st">Simplified and Traditional Chinese</string>
+    <string name="font_scale">修改字体大小</string>
 </resources>
