--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,4 +21,5 @@
     <string name="English">English</string>
     <string name="jar_to_st">Simplified and Traditional Chinese</string>
     <string name="font_scale">修改字体大小</string>
+    <string name="normal_size_font">标准字体大小</string>
 </resources>
