--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -36,4 +36,5 @@
     <string name="English">英語</string>
     <string name="jar_to_st">第三方库简繁体</string>
     <string name="font_scale">修改字体大小</string>
+    <string name="normal_size_font">标准字体大小</string>
 </resources>
