--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -21,4 +21,5 @@
     <string name="English">英语</string>
     <string name="jar_to_st">第三方库简繁体</string>
     <string name="font_scale">修改字体大小</string>
+    <string name="normal_size_font">标准字体大小</string>
 </resources>
