--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,4 +22,5 @@
     <string name="jar_to_st">Simplified and Traditional Chinese</string>
     <string name="font_scale">Modify font size</string>
     <string name="normal_size_font">Standard font size</string>
+    <string name="small_font">Small font</string>
 </resources>
