--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="jar_to_st">Simplified and Traditional Chinese</string>
     <string name="font_scale">Modify font size</string>
     <string name="normal_size_font">Standard font size</string>
+    <string name="small_font">小号字体</string>
 </resources>
